k8s-gateway/Deployment-k8s-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: k8s-gateway
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: k8s-gateway
    app.kubernetes.io/version: 0.3.4
    helm.sh/chart: k8s-gateway-2.0.4
  name: k8s-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: k8s-gateway
      app.kubernetes.io/name: k8s-gateway
  template:
    metadata:
      annotations:
        checksum/config: acbcba7c052504d00c4c4e4ddb910556a0d3821d9becd5d51eb9c1c433529f28
      labels:
        app.kubernetes.io/instance: k8s-gateway
        app.kubernetes.io/name: k8s-gateway
    spec:
      containers:
        - args:
            - -conf
            - /etc/coredns/Corefile
          image: quay.io/oriedge/k8s_gateway:v0.3.4
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            successThreshold: 1
            timeoutSeconds: 5
          name: k8s-gateway
          ports:
            - containerPort: 1053
              name: dns-udp
              protocol: UDP
            - containerPort: 9153
              name: metrics
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /ready
              port: 8181
              scheme: HTTP
            initialDelaySeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources: {}
          securityContext:
            runAsUser: 1000
          volumeMounts:
            - mountPath: /etc/coredns
              name: config-volume
      serviceAccountName: k8s-gateway
      volumes:
        - configMap:
            items:
              - key: Corefile
                path: Corefile
            name: k8s-gateway
          name: config-volume
