k8s-gateway/NetworkPolicy-allow-tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tailscale-ingress
  namespace: k8s-gateway
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale
      ports:
        - port: 1053
          protocol: UDP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: k8s-gateway
  policyTypes:
    - Ingress
